Classes weren't generating properly. Had to change some API documentation to work around the issue (#188)
