# src/main/java/se/sundsvall/casemanagement/api/model/OtherCaseDTO.java
@@ -1,6 +1,9 @@
 package se.sundsvall.casemanagement.api.model;
 
+import static java.util.Collections.emptyList;
+
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotNull;
 import java.io.Serializable;
 import java.util.List;
 import lombok.AllArgsConstructor;
@@ -22,5 +25,6 @@ public class OtherCaseDTO extends CaseDTO implements Serializable {
 	private static final long serialVersionUID = -1627503596853775503L;
 
 	@Schema(description = "The facilities in the case")
-	private List<FacilityDTO> facilities;
+	@NotNull
+	private List<FacilityDTO> facilities = emptyList();
 }
